--- a/dean/src/main/resources/application.yml
+++ b/dean/src/main/resources/application.yml
@@ -11,3 +11,7 @@ spring:
     name: dean
   config:
     import: optional:configserver:http://localhost:8888
+
+application:
+  config:
+    exam-url: http://localhost:8075/api/v1/exams
