--- a/system-config/src/main/resources/configurations/dean.yml
+++ b/system-config/src/main/resources/configurations/dean.yml
@@ -13,3 +13,8 @@ spring:
 application:
   config:
     exam-url: http://localhost:8022/api/v1/exams
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
